--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <label for="enteredNumber">Please enter your number:</label>
             <input id="numberInput" class="form-control" type="text">
         </div>
-        <button type="submit" form="inputBox" class="btn" id="convertButton">Convert</button>
+        <button type="submit" form="inputBox" class="btn" id="convertButton">Go!</button>
     </form>
     <div id="numeralResult">
     </div>
